fixed spacing, added small lists, added ripple animation

--- a/styles/animation.css
+++ b/styles/animation.css
@@ -1,15 +1,34 @@
 @keyframes slidein {
-  from {
-    margin-top: 100px;
-	opacity: .2;
-	margin-left: auto;
-    margin-right: auto;
-  }
+	from {
+		margin-top: 100px;
+		opacity: .2;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	to {
+		opacity: 1;
+		margin-left: 0%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 
-  to {
-	  opacity: 1;
-    margin-left: 0%;
-	margin-left: auto;
-    margin-right: auto;
-  }
+/* Credit to Ruddy for CSS: http://stackoverflow.com/questions/30074246/how-to-create-ripple-effect-on-click-material-design*/
+.ripple {
+	width: 0;
+	height: 0;
+	border-radius: 50%;
+	background: rgba(30, 136, 229, 0.4);
+	transform: scale(0);
+	position: absolute;
+	opacity: 1;
+}
+.rippleEffect {
+	animation: rippleDrop .5s linear;
+}
+@keyframes rippleDrop {
+	100% {
+		transform: scale(2);
+		opacity: 0;
+	}
 }
