--- a/styles/card.css
+++ b/styles/card.css
@@ -1,27 +1,27 @@
 .card {
-    background-color: #fff;
-    padding: 20 0 20 0;
+	background-color: #fff;
+	padding: 20 0 0 0;
 	margin: 20 0 20 0;
-    min-height: 100px;
-    border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	min-height: 100px;
+	border-radius: 2px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .card:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .card-title {
 	color: rgba(0, 0, 0, 0.85);
 	font-weight: 500;
 	font-size: 1.6em;
-    padding-left: 40px;
+	padding-left: 40px;
+	margin-bottom: 20px;
 }
 
 .card-text {
-	padding-top: 10px;
 	color: rgba(0, 0, 0, 0.57);
 	font-weight: 400;
-    padding: 20 40 20 40;
+	padding: 0 40 20 40;
 }
