--- a/styles/list-elements.css
+++ b/styles/list-elements.css
@@ -1,9 +1,19 @@
 .card-list-element {
-	margin-top: 20px;
 	min-height: 40px;
-    padding: 10 40 0 40;
+	padding: 10 40 20 40;
 	border-top: 1px solid rgba(0, 0, 0, 0.17);
-    cursor:pointer;
+	cursor:pointer;
+	color: rgba(0, 0, 0, 0.57);
+	font-weight: 400;
+	position: relative;
+	overflow: hidden;
+}
+
+.card-list-element.small {
+	min-height: 20px;
+	padding: 20 40 20 40;
+	cursor:pointer;
+	font-size: 1.1em;
 }
 
 .card-list-title {
@@ -28,4 +38,11 @@
 
 .card-hidden {
 	display: none;
+}
+
+.card-button {
+	color: #1E88E5;
+	width: 50px;
+	padding-top: 15px;
+	font-weight: 600;
 }
